Создано с помощью Colaboratory

--- a/naive_bayes.ipynb
+++ b/naive_bayes.ipynb
@@ -16,18 +16,7 @@
         "id": "jik38f5DX-XS"
       },
       "source": [
-        "# Seminar 01: Naive Bayes from scratch"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ZZuxrR7GX-XW"
-      },
-      "source": [
-        "Today we will write Naive Bayes classifier supporting different feature probabilities.\n",
-        "\n",
-        "_Authors: [Radoslav Neychev](https://github.com/neychev), [Vladislav Goncharenko](https://github.com/v-goncharenko)_"
+        "# Naive Bayes from scratch"
       ]
     },
     {
